outputs/csi300-test/2025-07-27_19-19-23/problem_iter18_response0.txt_stdout.txt
Traceback (most recent call last):
  File "/home/rjj/reevo/problems/csi300/eval.py", line 9, in <module>
    import gpt
  File "/home/rjj/reevo/problems/csi300/gpt.py", line 12
    df['price_zscore'] = (df['high'] + df['low']) / 2 - (df['high'] + df['low']).rolling(window=30).mean()) / (df['high'] + df['low']).rolling(window=30).std()
                                                                                                          ^
SyntaxError: unmatched ')'
